# cookiecutter-django-template

./: Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: Makefile  README.md  requirements.txt
