[tool.poetry]
name = "cookiecutter-django-template"
version = "0.1.0"
description = ""
authors = ["Ihor Peresunko <ihor.peresunko@gmail.com>"]
readme = "README.md"
packages = [{include = "cookiecutter_django_template"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "configs.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
